--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -194,166 +194,166 @@
       "introduction": "H Hospitality Group 致力於通過其多元化的酒店組合提供獨特而舒適的住宿體驗。我們的酒店戰略性地位於愛妮島的黃金地段，滿足各類旅客的需求，同時促進環境保護和可持續發展。我們提供豪華體驗，同時強調與當地文化和自然環境的和諧，為每位客人創造難忘的回憶。",
       "pieceLio": {
         "name": "Piece Lio",
-        "description": "愛妮島最舒適的酒店之一，與日本知名的 Piece Group 合作開發。提供 50 到 150 平方米的寬敞客房，相比當地酒店典型的 18 到 22 平方米客房提供更舒適的住宿。",
+        "description": "Piece Lio 是愛妮島上最舒適的酒店之一，與日本知名的 Piece 集團合作開發。Piece 集團在日本經營 10 家酒店，而 Piece Lio 提供 50 至 150 平方米的房間，相較於當地一般酒店 18 至 22 平方米的房型，為旅客帶來更寬敞舒適的住宿體驗。",
         "shortDescription": "與日本 Piece Group 合作開發的高端酒店，提供 50-150 平方米寬敞客房，遠超當地標準的舒適住宿體驗。",
         "rooms": "客房數：36",
         "openingYear": "開業年份：2024",
-        "location": "位置：Lio 機場區域（Ayala Lio）"
+        "location": "位置：Lio 機場區 (Ayala Lio)"
       },
       "hHotelVeganHotel": {
         "name": "H Hotel - 素食友好酒店",
-        "description": "位於愛妮島鎮中心，地理位置優越。提供 Ver De 的素食早餐和屋頂 Piece of Sky 餐廳的海景晚餐。TripAdvisor 排名前三的兩家餐廳都位於 H Hotel。",
+        "description": "H Hotel 是位於 El Nido 鎮中心的酒店，擁有極佳的地理位置。酒店提供 Ver De 的純素早餐，並在屋頂的 Piece of Sky 餐廳享受海景晚餐。目前，TripAdvisor 上排名前 3 的餐廳中有 2 家位於 H Hotel。",
         "shortDescription": "位於鎮中心的素食友好酒店，擁有兩家 TripAdvisor 排名前三的餐廳，提供素食早餐和海景晚餐。",
         "rooms": "客房數：41",
         "openingYear": "開業年份：2023",
-        "location": "位置：愛妮島鎮中心"
+        "location": "位置：El Nido Town Center"
       },
       "nacpanBeachGlamping": {
         "name": "納克潘海灘豪華露營",
-        "description": "位於納克潘海灘，是繼大小瀉湖後必訪之地。我們種植了 300 棵樹和 4000 株灌木，專注於環境保護並建立了海龜保護項目。",
+        "description": "Nacpan Beach 是旅客認為在 Big Lagoon 和 Small Lagoon 之外必訪的景點之一。我們在這片沙灘上開設了 Nacpan Beach Glamping，並種植了 300 棵樹和 4000 株灌木。我們致力於環境保育，不僅沒有破壞自然環境，還建立了海龜保育項目。",
         "shortDescription": "位於必訪的納克潘海灘，致力於環境保護，種植大量植物並設立海龜保護項目的豪華露營地。",
         "rooms": "客房數：18",
         "openingYear": "開業年份：2023",
-        "location": "位置：納克潘海灘"
+        "location": "位置：Nacpan Beach"
       },
       "nacpanBeachResort": {
         "name": "納克潘海灘度假村",
-        "description": "為不喜歡住帳篷的旅客提供更舒適的海灘住宿體驗。客人可以享受私人浴室設施，避免帳篷中獨立廁所的不便。",
+        "description": "為了給不想住在帳篷旅館的旅客更多選擇，Nacpan Beach Resort 提供了更舒適的沙灘住宿體驗，讓客人享受私人衛浴設施，避免住在帳篷中廁所分離的不便。",
         "shortDescription": "為追求舒適的旅客提供海灘度假體驗，配備私人浴室設施，是帳篷住宿的完美替代選擇。",
         "rooms": "客房數：26",
         "openingYear": "開業年份：2023",
-        "location": "位置：納克潘海灘"
+        "location": "位置：Nacpan Beach"
       },
       "nacpanBeachVillas": {
         "name": "納克潘海灘別墅",
-        "description": "我們在納克潘海灘的最新酒店投資，採用獨立別墅設計。雖然沒有健身房或游泳池，但位於海灘正上方，提供天然的海洋游泳池。由知名設計師 Justin 設計的房間提供舒適豪華的體驗。",
+        "description": "這是 Nacpan Beach 上我們最新的酒店投資，採用單棟別墅設計，雖然沒有健身房或游泳池，但其位於沙灘正上方，提供天然海洋游泳池。房間設計由知名設計師 Justin 操刀，提供旅客一個舒適、奢華的住宿體驗。",
         "shortDescription": "由知名設計師 Justin 打造的豪華海濱別墅，位於海灘正上方，擁有天然海洋游泳池的獨特住宿體驗。",
         "rooms": "客房數：14",
         "openingYear": "開業年份：2024",
-        "location": "位置：納克潘海灘"
+        "location": "位置：Nacpan Beach"
       },
       "sResortElNido": {
         "name": "S Resort 愛妮島",
-        "description": "位於愛妮島鎮，靠近 H Hotel，擁有 44 間客房。200 米範圍內有超過 100 家餐廳和酒吧，非常適合團體旅行或情侶度假。屋頂設有 H&C 中餐廳，一樓設有 Grounded 咖啡廳，提供美味的早晨咖啡。",
+        "description": "位於 El Nido 鎮上，鄰近 H Hotel，擁有 44 間房間，周圍 200 公尺內有超過 100 家餐廳與酒吧，非常適合團體旅行或情侶度假。酒店的頂樓設有 H&C 中餐廳，而一樓的 Grounded 咖啡廳則為您提供美味的早晨咖啡。",
         "shortDescription": "位於愛妮島鎮中心，周邊餐飲豐富，設有屋頂中餐廳和一樓咖啡廳，適合團體和情侶入住的現代度假村。",
         "rooms": "客房數：44",
         "openingYear": "開業年份：2023",
-        "location": "位置：愛妮島鎮中心"
+        "location": "位置：El Nido Town Center"
       },
       "jBoutiqueHotel": {
         "name": "J 精品酒店",
-        "description": "位於愛妮島鎮邊緣，步行 8 分鐘即可到達海灘。適合背包客和小型團體，提供實惠的價格，同時保持舒適時尚的裝飾。",
+        "description": "J Boutique Hotel 位於 El Nido 鎮的邊緣，步行 8 分鐘即可到達沙灘。這間酒店適合背包客和小團體入住，提供經濟實惠的價格，同時保有舒適與時尚的裝修風格。",
         "shortDescription": "位於鎮邊緣的時尚精品酒店，步行可達海灘，為背包客和小團體提供實惠舒適的住宿選擇。",
         "rooms": "客房數：14",
         "openingYear": "開業年份：2023",
-        "location": "位置：愛妮島鎮中心"
+        "location": "位置：El Nido Town Center"
       },
       "cHotel": {
         "name": "C Hotel（Casa Cecilia）",
-        "description": "以簡單的當地風格裝飾，為預算有限的旅客設計。提供優越的位置和簡單舒適的住宿。距離海灘僅 2 分鐘步行路程。",
+        "description": "C Hotel 以當地風格簡約裝修，專為預算有限的旅客設計，提供優越的地理位置和簡單舒適的住宿環境。酒店距離沙灘僅 2 分鐘步行路程。",
         "shortDescription": "距離海灘僅 2 分鐘步行路程的經濟型酒店，以當地風格簡約裝修，為預算旅客提供舒適住宿。",
         "rooms": "客房數：20",
         "openingYear": "開業年份：2023",
-        "location": "位置：愛妮島鎮中心"
+        "location": "位置：El Nido Town Center"
       },
       "zGardenHotel": {
         "name": "Z Garden Hotel",
-        "description": "我們最新的酒店開發項目，計劃於 2025 年開業，位於愛妮島港口旁。酒店客房分為海景和花園景觀，為旅客提供多樣化的住宿選擇。",
+        "description": "Z Garden Hotel 是我們最新開發的酒店，預計於 2025 年開幕，位於 El Nido 港口旁。酒店房間分為海景房和庭院景觀房，為旅客提供多樣的住宿選擇。",
         "shortDescription": "2025年開業的全新港口酒店項目，提供海景和花園景觀房，為旅客帶來多樣化的住宿體驗。",
         "rooms": "客房數：30",
         "openingYear": "開業年份：2025",
-        "location": "位置：愛妮島鎮中心"
+        "location": "位置：El Nido Town Center"
       }
     },
     "restaurantsCafeBars": {
       "introduction": "H Hospitality Group 的餐飲組合在愛妮島提供多樣化的美食體驗。從素食美食到正宗的亞洲料理，我們的餐廳滿足各種口味和偏好。我們以使用新鮮的當地食材為榮，並創造獨特的用餐氛圍，與愛妮島的自然美景相得益彰。",
       "pieceOfSky": {
         "name": "Piece of Sky",
-        "description": "一家屋頂餐廳，提供令人驚嘆的海景和亞洲與西方融合料理。非常適合浪漫晚餐或欣賞日落時品嚐雞尾酒。",
+        "description": "Piece of Sky 曾榮獲 TripAdvisor 最佳餐廳的評價，並長期位居前三名。不僅餐飲出色，這裡的景色更是令人難忘。在晴朗的日子，來到 Piece of Sky 用餐會是一段無與倫比的享受。自 2024 年 11 月起，來自杜拜的知名主廚加入，將為客人帶來無論是味覺還是視覺的雙重震撼。",
         "shortDescription": "位於屋頂的浪漫餐廳，提供亞西融合料理，伴隨壯麗海景和日落，是享用晚餐和雞尾酒的理想場所。",
-        "seats": "座位數：65",
-        "openingYear": "開業年份：2023",
-        "location": "位置：H Hotel 屋頂，愛妮島鎮中心"
+        "seats": "座位數：60",
+        "openingYear": "開業年份：2024",
+        "location": "位置：H Hotel, El Nido Town Center"
       },
       "hAndC": {
         "name": "H&C",
-        "description": "正宗的中國料理餐廳，專門提供粵菜和川菜。深受中國遊客和當地人喜愛。",
+        "description": "H&C 是 El Nido 鎮上唯一的中餐館，提供地道的中式料理，適合4至10人的桌菜，也提供2人單點餐食。特色菜包括活螃蟹、活龍蝦和清蒸魚。餐廳將於 2024 年底進行全新裝修，為客人提供更佳的用餐體驗。",
         "shortDescription": "專注於正宗粵菜和川菜的中式餐廳，以地道風味贏得中國遊客和當地人的喜愛。",
-        "seats": "座位數：50",
-        "openingYear": "開業年份：2023",
-        "location": "位置：S Resort 屋頂，愛妮島鎮中心"
+        "seats": "座位數：100",
+        "openingYear": "開業年份：2024",
+        "location": "位置：H Hotel, El Nido Town Center"
       },
       "threeBrosFalafel": {
         "name": "3 Bros Falafel",
-        "description": "受中東啟發的餐廳，以美味的沙威瑪和炸豆丸聞名。快速美味餐點的熱門地點。",
+        "description": "3 Bro Falafel 是與三兄弟合作經營的中東料理餐廳，以新鮮製作的鷹嘴豆泥餅皮為特色，每日現做，並營業至凌晨1點，為夜間宵夜愛好者提供美味的選擇。",
         "shortDescription": "深受歡迎的中東風味餐廳，以道地的沙威瑪和炸豆丸聞名，是享用快速美味餐點的理想選擇。",
-        "seats": "座位數：30",
-        "openingYear": "開業年份：2023",
-        "location": "位置：愛妮島鎮中心"
+        "seats": "座位數：10",
+        "openingYear": "開業年份：2024",
+        "location": "位置：H Hotel, El Nido Town Center"
       },
       "groundedCoffee": {
         "name": "Grounded Coffee",
-        "description": "專業咖啡店，提供高品質、可持續採購的咖啡。咖啡愛好者和數位遊牧族的完美去處。",
+        "description": "Grounded 咖啡廳位於 S Resort 一樓，由知名建築師 Justin 設計，無論是廁所設計還是共用桌面，都展現出獨特的風格，讓人耳目一新。推薦一杯 Oat Milk Latte，絕對不容錯過。",
         "shortDescription": "專業咖啡店，提供可持續採購的優質咖啡，是咖啡愛好者和數位遊牧工作者的理想場所。",
         "seats": "座位數：18",
         "openingYear": "開業年份：2023",
-        "location": "位置：愛妮島鎮中心"
+        "location": "位置：El Nido Town Center"
       },
       "janeCoffee": {
         "name": "Jane Coffee",
-        "description": "H Hospitality Group 最新投資，專注於高端手沖咖啡體驗。專業咖啡師為品味獨特的咖啡愛好者提供 1-2 小時的精緻咖啡體驗。",
+        "description": "Jane Coffee 是 H Hospitality Group 最新的投資，主打高檔手沖咖啡體驗。專業咖啡師將為客人提供 1 至 2 小時的精緻咖啡體驗，適合對咖啡有極高要求的客人。",
         "shortDescription": "高端精品咖啡店，由專業咖啡師提供 1-2 小時的精緻手沖咖啡體驗，為追求品質的咖啡愛好者打造。",
         "seats": "座位數：15",
         "openingYear": "開業年份：2025",
-        "location": "位置：愛妮島鎮中心"
+        "location": "位置：El Nido Town Center"
       },
       "lechonCo": {
         "name": "Lechon Co by H Hospitality Group",
-        "description": "與宿霧的烹飪大師合作，提供著名的烤乳豬。必嚐的傳統菲律賓菜餚，位於 H Hotel 對面。",
+        "description": "2024 年底，我們與來自宿霧的烹飪大師合作，開設了知名的 Lechon 烤乳豬店。Lechon 是菲律賓經典的傳統料理，來到菲律賓一定要品嚐這道美食。餐廳位於 H Hotel 斜對面。",
         "shortDescription": "與宿霧烹飪大師合作的特色餐廳，提供正宗烤乳豬，為您帶來傳統菲律賓美食體驗。",
         "seats": "座位數：8",
         "openingYear": "開業年份：2025",
-        "location": "位置：愛妮島鎮中心"
+        "location": "位置：El Nido Town Center"
       },
       "verDeElNido": {
         "name": "Ver De El Nido",
-        "description": "愛妮島首家全素食餐廳，由美國和菲律賓知名廚師共同創立。特色包括 6 米高的玻璃窗、空調和 Beyond Meat 產品。在 TripAdvisor 排名前三。",
+        "description": "Ver De 是 H Hotel 一樓的全素餐廳，由來自美國與菲律賓的知名廚師聯合創辦。這是 El Nido 首家全素 Vegan 餐廳，並在 TripAdvisor 上獲得前 3 名的殊榮。餐廳擁有 6 米挑高的玻璃窗和冷氣設施，並提供來自 Bill Gates 投資的人造肉 Beyond Meat，這是一間具有創新特色的餐廳。",
         "shortDescription": "愛妮島首家全素食餐廳，由知名廚師打造，擁有寬敞優雅的用餐環境，提供 Beyond Meat 等創新素食料理。",
         "seats": "座位數：65",
         "openingYear": "開業年份：2025",
-        "location": "位置：愛妮島鎮中心"
+        "location": "位置：El Nido Town Center"
       },
       "sunmaiNacpanBeach": {
         "name": "金色三麥",
-        "description": "一家台灣精釀啤酒吧，提供多種獨特的啤酒。適合想要探索新口味的啤酒愛好者。",
+        "description": "Sunmai Nacpan Beach 位於巴拉望最著名的 Nacpan Beach 正中心，是這片美麗沙灘上的主要餐廳之一。餐廳提供美味的披薩、韓式料理與菲式料理，不論是住在 Nacpan Beach 上的旅客，還是來進行當日來回遊覽的旅客，都強烈推薦前來品嚐 Sunmai 的美食。",
         "shortDescription": "正宗台灣精釀啤酒吧，為啤酒愛好者提供多種獨特風味，是品嚐精釀啤酒的絕佳去處。",
-        "seats": "座位數：40",
-        "openingYear": "開業年份：2024",
-        "location": "位置：愛妮島鎮中心"
+        "seats": "座位數：120",
+        "openingYear": "開業年份：2017",
+        "location": "位置：Nacpan Beach"
       },
       "hAndCChinese": {
         "name": "H&C 中餐廳",
-        "description": "一家正宗的中國餐廳，專門提供來自中國各地的傳統菜餚。深受當地人和遊客歡迎。",
+        "description": "H&C 是 El Nido 鎮上唯一的中餐館，提供地道的中式料理，適合4至10人的桌菜，也提供2人單點餐食。特色菜包括活螃蟹、活龍蝦和清蒸魚。餐廳將於 2024 年底進行全新裝修，為客人提供更佳的用餐體驗。",
         "shortDescription": "提供來自中國各地傳統美食的正宗中餐廳，以地道風味贏得當地人和遊客的青睞。",
-        "seats": "座位數：60",
+        "seats": "座位數：100",
         "openingYear": "開業年份：2024",
-        "location": "位置：愛妮島鎮中心"
+        "location": "位置：H Hotel, El Nido Town Center"
       },
       "unocha": {
         "name": "Unocha",
-        "description": "一家受日本啟發的茶館，提供寧靜的氛圍和各種高品質茶飲和輕食。",
+        "description": "來自台灣高雄知名品牌 Unocha 的烏弄珍珠奶茶，我們成功取得菲律賓的代理權，並在 El Nido 的 H Hotel 開設分店。出海後來一杯珍珠奶茶，是島嶼旅遊最幸福的享受之一。",
         "shortDescription": "充滿日式風情的精緻茶館，在寧靜優雅的氛圍中提供多種高品質茶飲和精緻輕食。",
         "seats": "座位數：25",
         "openingYear": "開業年份：2024",
-        "location": "位置：愛妮島鎮中心"
+        "location": "位置：H Hotel, El Nido Town Center"
       },
       "3BrosFalafel": {
         "name": "3 Bros Falafel",
-        "description": "一家充滿活力的餐廳，專門提供墨西哥風格的捲餅，在愛妮島提供獨特的風味融合。",
+        "description": "3 Bro Falafel 是與三兄弟合作經營的中東料理餐廳，以新鮮製作的鷹嘴豆泥餅皮為特色，每日現做，並營業至凌晨1點，為夜間宵夜愛好者提供美味的選擇。",
         "shortDescription": "充滿活力的特色餐廳，將墨西哥風味與當地特色完美融合，為愛妮島帶來獨特的美食體驗。",
-        "seats": "座位數：35",
-        "openingYear": "開業年份：2023",
-        "location": "位置：愛妮島鎮中心"
+        "seats": "座位數：10",
+        "openingYear": "開業年份：2024",
+        "location": "位置：H Hotel, El Nido Town Center"
       }
     },
     "spa": {
@@ -379,23 +379,23 @@
       "introduction": "H Hospitality Group 通過與頂級當地旅遊公司如 Discover El Nido 的合作，提供全面的旅遊和活動服務。我們的服務範圍從專業導覽、舒適交通、婚禮策劃到獨特的市集體驗，滿足不同旅客的需求。無論您是探索愛妮島的美景，還是在納克潘海灘策劃浪漫婚禮，H Hospitality Group 都致力於提供無與倫比的體驗。我們理解每次旅程都是獨一無二的，並努力為每位旅客創造美好回憶。",
       "discoverElNido": {
         "name": "Discover El Nido",
-        "description": "愛妮島評分最高的旅遊公司，獲得 TripAdvisor 認證，與 H Hospitality Group 密切合作。擁有 9 艘船和專業導遊服務，是探索愛妮島自然美景的首選。"
+        "description": "Discover El Nido 是 El Nido 評價最高的旅遊公司，由 TripAdvisor 榮譽認證，並與 H Hospitality Group 緊密合作。其創辦人與 H Hospitality Group 的創辦人是多年好友。Discover El Nido 擁有 9 艘船，提供最專業的導遊服務，帶領遊客探索 El Nido 的美麗自然景觀，是來 El Nido 的旅客首選的旅遊公司。"
       },
       "elNidoGO": {
         "name": "El Nido GO",
-        "description": "為中國遊客提供一站式服務的旅行社，處理從機票到行程的所有事宜。適合不太熟悉英語或行程規劃的遊客。"
+        "description": "El Nido Go 是專為華人旅客提供一站式服務的旅行社。無論是機票、旅館、餐飲還是行程規劃，El Nido Go 都能為您打理一切。特別適合不熟悉英語或不擅長自行規劃旅程的旅客，讓您輕鬆享受無憂無慮的旅行。"
       },
       "nacpanBeachShuttle": {
         "name": "納克潘海灘接駁車",
-        "description": "前往納克潘海灘的經濟實惠接駁服務。空調車輛，往返 15 美元。"
+        "description": "Nacpan Beach 是世界上最美的沙灘之一，但前往該地並不容易，單程包車費用約 $50 美元。Nacpan Beach Shuttle 為旅客提供了更實惠的選擇，往返只需 $15 美元。這些接駁車配備冷氣，為旅客提供方便、舒適的旅程，是前往 Nacpan Beach 的理想交通方式。"
       },
       "nacpanBeachWedding": {
         "name": "納克潘海灘婚禮",
-        "description": "專門在納克潘海灘安排夢幻海灘婚禮。提供從場地佈置到活動策劃的全面服務，確保每個細節都完美無缺。"
+        "description": "對許多人來說，在沙灘上舉辦婚禮是一生中最夢幻的時刻。Nacpan Beach Wedding 專門為客戶安排在這片美麗沙灘上的婚禮，無論是場地布置、活動策劃還是其他婚禮需求，我們都能提供一條龍服務，確保每個細節都完美無缺。"
       },
       "nacpanSunsetMarket": {
         "name": "納克潘日落市集",
-        "description": "受台灣著名夜市啟發，這個海濱市集提供各種美食和手工藝品，讓遊客在欣賞日落美景的同時體驗當地文化。"
+        "description": "在 Nacpan Beach 欣賞夕陽美景的同時，還能享受 Nacpan Sunset Market 的樂趣。這個市場靈感來自台灣著名的夜市，讓遊客在浪漫的沙灘氛圍中體驗豐富多樣的美食與手工藝品"
       }
     }
   },
