[modify] change translate

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -5,7 +5,7 @@
     "hotel": "Our Hotels",
     "timeline": "Timeline",
     "contact": "Contact",
-    "investing": "Investing"
+    "investing": "Our Investment"
   },
   "masthead": {
     "title": "H Hospitality Group",
