[modify] update page content

--- a/locales/zh-CN/translation.json
+++ b/locales/zh-CN/translation.json
@@ -11,7 +11,7 @@
     "subtitle": "您下次天堂度假不容错过的住宿选择！"
   },
   "about": {
-    "description": "H Hospitality Group是由有远见的企业家Henry创立的新兴管理公司，在爱妮岛（El Nido）巴拉望（Palawan）树立了行业标杆。在过去七年中，该地区的旅游业增长了惊人的 700%，集团不仅影响了这一增长，还自豪地拥有班车服务、旅行社和多家酒店，进一步巩固了其在行业中的地位。除了核心的酒店服务外，H Hospitality Group还经营多家餐厅和咖啡厅，提供多样化的用餐体验，展示了该地区丰富的风味。该集团还在扩大其投资组合，正在开发一家尖端的公寓式酒店，旨在重新定义爱妮岛的奢华生活。",
+    "description": "H Hospitality Group是由有远见的企业家Henry创立的新兴管理公司，已在爱妮岛（El Nido），巴拉望（Palawan）树立了行业标杆。集团拥有超过300名员工，致力于推动该地区的发展并提供就业机会。在过去七年中，该地区的旅游业增长了惊人的700%，集团不仅助力了这一增长，还经营班车服务、旅行社和多家酒店，巩固其在行业中的领先地位。H Hospitality Group不仅注重提供卓越的酒店服务，还经营多家餐厅和咖啡厅，带来多样化的用餐体验，展现当地丰富的风味。此外，该集团积极回馈社会，支持学校的营养午餐计划，致力于改善社区生活质量。集团也在持续扩展其投资组合，并开发一家尖端的公寓式酒店，旨在重新定义爱妮岛的奢华生活。",
     "beachfrontHotels": "海滨酒店",
     "beachfrontRestaurants": "海滨餐厅",
     "hotel": "我们的酒店",
