--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -11,7 +11,7 @@
     "subtitle": "您下次天堂度假不容錯過的住宿選擇！"
   },
   "about": {
-    "description": "H Hospitality Group是由有遠見的企業家Henry創立的新興管理公司，在愛妮島（El Nido）巴拉望（Palawan）樹立了行業標杆。在過去七年中，該地區的旅遊業增長了驚人的 700%，集團不僅影響了這一增長，還自豪地擁有班車服務、旅行社和多家酒店，進一步鞏固了其在行業中的地位。除了核心的酒店服務外，H Hospitality Group還經營多家餐廳和咖啡廳，提供多樣化的用餐體驗，展示了該地區豐富的風味。該集團還在擴大其投資組合，正在開發一家尖端的公寓式酒店，旨在重新定義愛妮島的奢華生活。",
+    "description": "H Hospitality Group是由有遠見的企業家Henry創立的新興管理公司，已在愛妮島（El Nido），巴拉望（Palawan）樹立了行業標杆。集團擁有超過300名員工，致力於推動該地區的發展和提供就業機會。在過去七年中，該地區的旅遊業增長了驚人的 700%，集團不僅助力了這一增長，還經營班車服務、旅行社和多家酒店，鞏固其在行業中的領先地位。H Hospitality Group不僅注重提供卓越的酒店服務，還經營多家餐廳和咖啡廳，帶來多樣化的用餐體驗，展現當地豐富的風味。此外，該集團積極回饋社會，支持學校的營養午餐計劃，致力於改善社區生活質量。集團也在持續擴展其投資組合，並開發一家尖端的公寓式酒店，旨在重新定義愛妮島的奢華生活。",
     "beachfrontHotels": "海濱酒店",
     "beachfrontRestaurants": "海濱餐廳",
     "hotel": "我們的酒店",
