[modify] 新增合唱團章節

--- a/locales/zh-CN/translation.json
+++ b/locales/zh-CN/translation.json
@@ -58,6 +58,12 @@
       "description1": "H Hospitality Group支持当地运动项目，以此来加强团队合作、纪律和社区精神。我们的篮球队是我们对这些价值观承诺的象征，在2023年取得了重大里程碑，赢得了冠军。这一胜利不仅为我们的组织带来了骄傲，还激励了我们的社区在场内外都追求卓越。",
       "description2": "今年，HHG 将成立自己的合唱团以展示歌唱才能，以及舞蹈俱乐部以突出舞蹈创意。这些倡议表明我们不仅在酒店业卓越，还在培养多样化才能方面出色。它们通过为我们的团队成员提供艺术表达和个人成长的机会，促进了社区内的工作生活平衡。此外，这些俱乐部旨在通过表演和活动与社区互动并回馈社区，将人们聚集在一起，庆祝当地才能。"
     },
+    "gleeClub": {
+      "title": "HHG合唱团：爱妮岛的音乐之声",
+      "description1": "HHG合唱团是H Hospitality Group Corporation (HHG)内部的员工团体，通过对音乐的共同热爱将大家凝聚在一起。作为爱妮岛第一个酒店业合唱团，合唱团代表了HHG员工的精神，成员来自我们所有的据点 - 市区、Lio和纳克潘，共同创造和谐的声音。",
+      "description2": "合唱团于2024年8月18日在酒店篮球友谊赛上首次亮相，通过演唱国歌为活动揭开序幕，为HHG带来骄傲，也为在场所有人带来欢乐。13位来自HHG各个部门的员工歌手组成的合唱团，为爱妮岛带来了音乐之声。",
+      "description3": "HHG合唱团不仅仅是一个合唱团，更是HHG致力于工作生活平衡和员工参与的见证。通过这样的社团，我们的员工找到了新的途径来表达自我、与同事交流，并将他们的热情带入工作场所。在人力资源部门的支持下，合唱团加强了我们的信念：HHG不仅仅是一份工作 - 它是一个充满活力的社区，每个人都有发声的机会。随着合唱团的不断成长，他们已经在为即将到来的表演做准备，与更广泛的爱妮岛社区建立联系。"
+    },
     "conclusion": "在H Hospitality Group，我们致力于为我们的人民、社区和环境打造可持续的未来。我们的企业社会责任倡议是我们坚定不移地致力于在爱妮岛及其他地方一步一步地产生积极影响的见证。"
   },
   "contact": {
