--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -58,6 +58,12 @@
       "description1": "H Hospitality Group 支持當地運動項目，以此來加強團隊合作、紀律和社區精神。我們的籃球隊是我們對這些價值觀承諾的象徵，在2023年取得了重大里程碑，贏得了冠軍。這一勝利不僅為我們的組織帶來了驕傲，還激勵了我們的社區在場內外都追求卓越。",
       "description2": "今年，HHG 將成立自己的合唱團以展示歌唱才能，以及舞蹈俱樂部以突出舞蹈創意。這些倡議表明我們不僅在酒店業卓越，還在培養多樣化才能方面出色。它們通過為我們的團隊成員提供藝術表達和個人成長的機會，促進了社區內的工作生活平衡。此外，這些俱樂部旨在通過表演和活動與社區互動並回饋社區，將人們聚集在一起，慶祝當地才能。"
     },
+    "gleeClub": {
+      "title": "HHG 合唱團：愛妮島的音樂之聲",
+      "description1": "HHG 合唱團是 H Hospitality Group Corporation (HHG) 內部的員工團體，通過對音樂的共同熱愛將大家凝聚在一起。作為愛妮島第一個酒店業合唱團，合唱團代表了 HHG 員工的精神，成員來自我們所有的據點 - 市區、Lio 和納克潘，共同創造和諧的聲音。",
+      "description2": "合唱團於2024年8月18日在酒店籃球友誼賽上首次亮相，通過演唱國歌為活動揭開序幕，為 HHG 帶來驕傲，也為在場所有人帶來歡樂。13位來自 HHG 各個部門的員工歌手組成的合唱團，為愛妮島帶來了音樂之聲。",
+      "description3": "HHG 合唱團不僅僅是一個合唱團，更是 HHG 致力於工作生活平衡和員工參與的見證。通過這樣的社團，我們的員工找到了新的途徑來表達自我、與同事交流，並將他們的熱情帶入工作場所。在人力資源部門的支持下，合唱團加強了我們的信念：HHG 不僅僅是一份工作 - 它是一個充滿活力的社區，每個人都有發聲的機會。隨著合唱團的不斷成長，他們已經在為即將到來的表演做準備，與更廣泛的愛妮島社區建立聯繫。"
+    },
     "conclusion": "在H Hospitality Group，我們致力於為我們的人民、社區和環境打造可持續的未來。我們的企業社會責任倡議是我們堅定不移地致力於在愛妮島及其他地方一步一步地產生積極影響的見證。"
   },
   "contact": {
