--- a/locales/zh-CN/translation.json
+++ b/locales/zh-CN/translation.json
@@ -4,7 +4,7 @@
     "hotel": "我们的酒店",
     "timeline": "时间轴",
     "contact": "联系我们",
-    "investing": "投资"
+    "investing": "我们的投资"
   },
   "masthead": {
     "title": "H Hospitality Group",
