[modify] update translate

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -47,7 +47,19 @@
     },
     "turtleConservation": {
       "title": "Turtle Conservation Legacy",
-      "description": "Since 2016, H Hospitality Group has been a proud supporter of the Nacpan Turtle Hatchery. Through our contributions, over 45,000 sea turtles have been successfully rehabilitated and released into the ocean, safeguarding the lives of these incredible creatures and preserving the delicate marine ecosystem. Our efforts to protect and conserve wildlife reflect our deep respect for the natural beauty of Palawan."
+      "description": "We take pride in our efforts to conserve sea turtles. Regular training sessions are conducted for our staff to emphasize the importance of sea turtle conservation, and we extend this education to our guests as well. Each year, we release between 8,000 to 10,000 sea turtles back into the ocean. By 2024, we have saved and rehabilitated over 49,500 lives, contributing to the preservation of marine ecosystems."
+    },
+    "spayingNeutering": {
+      "title": "Spaying and Neutering Stray Dogs and Cats",
+      "description": "In collaboration with Vet in Practice, a reputable veterinary group from Manila, we host weekly spaying and neutering clinics for stray dogs and cats in the local community. Over the course of a month, we welcome six groups of five veterinarians, providing them with accommodations in our hotels. These free clinics help control the population of stray animals, improving their welfare and the overall community environment."
+    },
+    "nutritionalLunchProgram": {
+      "title": "Nutritional Lunch Program",
+      "description": "Understanding the challenges faced by undernourished elementary school students, we have launched a program to provide nutritious lunches. This initiative ensures that children in our community have access to the essential nutrients they need for growth, learning, and a brighter future."
+    },
+    "christmasGiftGiving": {
+      "title": "Christmas Gift Giving",
+      "description": "Every Christmas, we spread joy by distributing gifts to local schoolchildren. This tradition strengthens our bond with the community and brings smiles to the faces of countless children during the holiday season."
     },
     "brigadaEskwela": {
       "title": "Empowerment Through Brigada Eskwela",
