--- a/locales/zh-CN/translation.json
+++ b/locales/zh-CN/translation.json
@@ -46,7 +46,19 @@
     },
     "turtleConservation": {
       "title": "海龟保护",
-      "description": "自2016年以来，H Hospitality Group一直是纳克潘海龟孵化场的骄傲支持者。通过我们的贡献，超过45,000只海龟已成功康复并被释放回海洋，保护了这些令人难以置信的生物的生命，并保护了脆弱的海洋生态系统。我们保护和保育野生动物的努力反映了我们对巴拉望岛自然美景的深深敬意。"
+      "description": "我们以海龟保育为荣，定期为员工举办相关培训，强调海龟保育的重要性，并将这份教育延伸至我们的旅客。每年，我们将 8,000 至 10,000 只海龟释放回大海。截至2024年，我们已成功拯救并复育了超过49,500只海龟生命，为海洋生态的保护作出重要贡献。"
+    },
+    "spayingNeutering": {
+      "title": "流浪狗与猫绝育行动",
+      "description": "我们与马尼拉知名的 Vet in Practice 动物医院合作，每周举办免费的流浪狗猫绝育活动。我们在一个月内接待来自马尼拉的6组、每组5位兽医，为他们提供住宿。这些活动有效控制了流浪动物的数量，改善了它们的生活条件，也提升了社区的整体环境。"
+    },
+    "nutritionalLunchProgram": {
+      "title": "营养午餐计划",
+      "description": "了解到部分小学学生面临营养不良的挑战，我们推出了营养午餐计划，为这些孩子提供均衡的营养餐。这项举措确保当地的孩子能获得成长与学习所需的基本营养，为他们的未来奠定更稳固的基础。"
+    },
+    "christmasGiftGiving": {
+      "title": "圣诞礼物赠送活动",
+      "description": "每年圣诞节，我们通过分送礼物为当地学童带来欢乐。这项传统不仅拉近了我们与社区的距离，也为无数孩子的节日增添了温暖与笑容。"
     },
     "brigadaEskwela": {
       "title": "Brigada Eskwela 计划",
