--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -46,7 +46,19 @@
     },
     "turtleConservation": {
       "title": "海龜保護",
-      "description": "自2016年以來，H Hospitality Group一直是Nacpan海龜孵化場的驕傲支持者。通過我們的貢獻，超過45,000隻海龜已成功康復並被釋放回海洋，保護了這些令人難以置信的生物的生命，並保護了脆弱的海洋生態系統。我們保護和保育野生動物的努力反映了我們對巴拉望島自然美景的深深敬意。"
+      "description": "我們以海龜保育為榮，定期為員工舉辦相關培訓，強調海龜保育的重要性，並將這份教育延伸至我們的旅客。每年，我們將 8,000 至 10,000 隻海龜釋放回大海。截至 2024 年，我們已成功拯救並復育了超過 49,500 隻海龜生命，為海洋生態的保護作出重要貢獻。"
+    },
+    "spayingNeutering": {
+      "title": "流浪狗與貓結紮行動",
+      "description": "我們與馬尼拉知名的 Vet in Practice 動物醫院合作，每週舉辦免費的流浪狗貓結紮活動。我們在一個月內接待來自馬尼拉的 6 組、每組 5 位獸醫，為他們提供住宿。這些活動有效控制了流浪動物的數量，改善了牠們的生活條件，也提升了社區的整體環境。"
+    },
+    "nutritionalLunchProgram": {
+      "title": "營養午餐計畫",
+      "description": "了解到部分小學學生面臨營養不良的挑戰，我們推出了營養午餐計畫，為這些孩子提供均衡的營養餐。這項舉措確保當地的孩子能獲得成長與學習所需的基本營養，為他們的未來奠定更穩固的基礎。"
+    },
+    "christmasGiftGiving": {
+      "title": "聖誕禮物贈送活動",
+      "description": "每年聖誕節，我們透過分送禮物為當地學童帶來歡樂。這項傳統不僅拉近了我們與社區的距離，也為無數孩子的節日增添了溫暖與笑容。"
     },
     "brigadaEskwela": {
       "title": "Brigada Eskwela 計劃",
