[modify] update lechon

--- a/locales/zh-CN/translation.json
+++ b/locales/zh-CN/translation.json
@@ -308,8 +308,8 @@
       },
       "lechonCo": {
         "name": "Lechon Co by H Hospitality Group",
-        "description": "2024 年底，我们与来自宿务的烹饪大师合作，开设了知名的 Lechon 烤乳猪店。Lechon 是菲律宾经典的传统料理，来到菲律宾一定要品尝这道美食。餐厅位于 H Hotel 斜对面。",
-        "shortDescription": "与宿务烹饪大师合作的特色餐厅，提供正宗烤乳猪，为您带来传统菲律宾美食体验。",
+        "description": "<p>现已在巴拉湾爱妮岛开幕！体验由巴克洛德知名厨师重新演绎的宿务风味烤乳猪！</p><p>如果您正在探索爱妮岛，巴拉湾，并想知道在爱妮岛哪里用餐，就来这里吧！我们完美烘烤的烤乳猪现在在爱妮岛就能品尝。</p><p>在爱妮岛享用一顿美味的烤乳猪午餐，搭配各式配菜，与朋友分享，或订购整只烤乳猪来体验真正的菲律宾盛宴。</p><h6>爱妮岛巴拉湾的烤乳猪</h6><p>烤乳猪是菲律宾的美食瑰宝，传统上在庆典时供应。这道慢烤全猪，拥有金黄酥脆的外皮和多汁鲜美的肉质，是访问菲律宾时必尝的美食。现在在爱妮岛就能品尝。</p><h6>如何找到我们？</h6><p>位于爱妮岛镇上H Hotel对面，是您结束爱妮岛一日游后的完美用餐地点。<br>无论您是游客还是当地人，H Hospitality Group的Lechon Co都是您在爱妮岛品尝最佳烤乳猪的首选之地！</p>",
+        "shortDescription": "在爱妮岛首屈一指的烤乳猪餐厅体验正宗的宿务烤乳猪，融合巴克洛德风味，以传统菲律宾方式烹制，特色是酥脆的外皮和多汁的肉质。",
         "seats": "座位数：8",
         "openingYear": "开业年份：2025",
         "location": "位置：El Nido Town Center"
