--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -327,8 +327,8 @@
       },
       "lechonCo": {
         "name": "Lechon Co by H Hospitality Group",
-        "description": "2024 年底，我們與來自宿霧的烹飪大師合作，開設了知名的 Lechon 烤乳豬店。Lechon 是菲律賓經典的傳統料理，來到菲律賓一定要品嚐這道美食。餐廳位於 H Hotel 斜對面。",
-        "shortDescription": "與宿霧烹飪大師合作的特色餐廳，提供正宗烤乳豬，為您帶來傳統菲律賓美食體驗。",
+        "description": "<p>現已在巴拉望愛妮島開幕！體驗由巴克洛德知名廚師重新演繹的宿霧風味烤乳豬！</p><p>如果您正在探索愛妮島，巴拉望，並想知道在愛妮島哪裡用餐，就來這裡吧！我們完美烘烤的烤乳豬現在在愛妮島就能品嚐。</p><p>在愛妮島享用一頓美味的烤乳豬午餐，搭配各式配菜，與朋友分享，或訂購整隻烤乳豬來體驗真正的菲律賓盛宴。</p><h6>愛妮島巴拉望的烤乳豬</h6><p>烤乳豬是菲律賓的美食瑰寶，傳統上在慶典時供應。這道慢烤全豬，擁有金黃酥脆的外皮和多汁鮮美的肉質，是造訪菲律賓時必嚐的美食。現在在愛妮島就能品嚐。</p><h6>如何找到我們？</h6><p>位於愛妮島鎮上H Hotel對面，是您結束愛妮島一日遊後的完美用餐地點。<br>無論您是遊客還是當地人，H Hospitality Group的Lechon Co都是您在愛妮島品嚐最佳烤乳豬的首選之地！</p>",
+        "shortDescription": "在愛妮島首屈一指的烤乳豬餐廳體驗正宗的宿霧烤乳豬，融合巴克洛德風味，以傳統菲律賓方式烹製，特色是酥脆的外皮和多汁的肉質。",
         "seats": "座位數：8",
         "openingYear": "開業年份：2025",
         "location": "位置：El Nido Town Center"
