--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -326,8 +326,8 @@
       },
       "lechonCo": {
         "name": "Lechon Co by H Hospitality Group",
-        "description": "In late 2024, we partnered with a culinary master from Cebu to open the renowned Lechon roasted pig shop. Lechon is a classic Philippine traditional dish that's a must-try when visiting the Philippines. The restaurant is located opposite H Hotel.",
-        "shortDescription": "A specialty restaurant in partnership with a Cebu culinary master, offering authentic roasted pig for a traditional Philippine dining experience.",
+        "description": "<p>Now Open in El Nido, Palawan! Experience the iconic Cebu Lechon, reimagined in Bacolod style by a renowned culinary master from Bacolod!</p><p>If you're exploring El Nido, Palawan, and wondering where to eat in El Nido, look no further! Our perfectly roasted Lechon is now available on El Nido Island.</p><p>Enjoy a delicious lunch in El Nido with a plate of Lechon and a variety of sides, share it withfriends, or order a whole Lechon for a true Filipino feast.</p><h6>Lechon in El Nido Palawan</h6><p>Lechon is a Filipino culinary treasure, traditionally served during celebrations. This slow-roasted whole pig, with its crispy golden skin and juicy, flavorful meat, is a must-try when visiting the Philippines. Now available in El Nido. </p><h6>Where to find us?</h6><p>Located opposite H Hotel in El Nido Town, we're the perfect stop after a day of tours in El Nido.<br>Whether you're a tourist or a local, Lechon Co by H Hospitality Group is your go-to spot for the best Lechon in El Nido!</p>",
+        "shortDescription": "Experience authentic Cebu Lechon with a Bacolod twist at El Nido's premier roasted pig destination, featuring crispy skin and juicy meat prepared in traditional Filipino style.",
         "seats": "Seats: 8",
         "openingYear": "Opening Year: 2025",
         "location": "Location: El Nido Town Center"
