feat(导航): 在所有页面添加地图链接并更新多语言翻译

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -5,6 +5,7 @@
     "hotel": "Our Hotels",
     "timeline": "Timeline",
     "contact": "Contact",
+    "map": "Map",
     "investing": "Our Investments"
   },
   "masthead": {
