--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -4,6 +4,7 @@
     "hotel": "我們的酒店",
     "timeline": "時間軸",
     "contact": "聯繫我們",
+    "map": "地圖",
     "investing": "我們的投資"
   },
   "masthead": {
