--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -184,15 +184,27 @@
       "location": "Near Nacpan Beach, El Nido, Palawan",
       "highlights": "免費WiFi、花園、露台、酒吧"
     },
-    "milanGraceInn": {
+    "zGardenHotel": {
       "name": "Z Garden Hotel",
-      "shortDescription": "預計2025年開幕的全新酒店項目，位於愛妮島港口旁，提供海景房和庭院景觀房等多樣化住宿選擇。",
-      "description": "Z Garden Hotel 是我們最新開發的酒店，預計於 2025 年開幕，位於 El Nido 港口旁。酒店房間分為海景房和庭院景觀房，為旅客提供多樣的住宿選擇。",
+      "shortDescription": "為Z世代旅客打造的完美目的地，擁有現代化設計和優越位置。",
+      "description": "Z Garden Hotel — 為 Z 世代而生的旅旅之地。位於 El Nido 市中心、港口正前方，距離 H Hotel 步行僅 3 分鐘，地點無敵便利。全館客房於 2026 年全新改裝，以極簡又富質感的美學打造。房間最大亮點是整面清水模風藝術牆，以日本清水模質地為靈感，呈現出低調、乾淨、極具現代感的視覺氛圍。",
+      "tagline": "為 Z 世代而生的旅旅之地",
+      "introTitle": "Z Garden Hotel — 為 Z 世代而生的旅旅之地",
+      "introDescription1": "位於 El Nido 市中心、港口正前方，距離 H Hotel 步行僅 3 分鐘，地點無敵便利，無論要出海、吃飯或探索市區，都能隨時出發。",
+      "introDescription2": "全館客房於 2026 年全新改裝，以極簡又富質感的美學打造。房間最大亮點是整面清水模風藝術牆，以日本清水模質地為靈感，呈現出低調、乾淨、極具現代感的視覺氛圍。搭配柔和燈光與舒適家具，讓旅客一進房就能感受到放鬆與品味並存。",
+      "introDescription3": "Z Garden Hotel 的核心精神，是提供年輕、自在、喜歡風格與便利的 Z 世代旅客，一個價格合理、環境清爽、位置完美的住宿選擇。",
+      "feature1Title": "優越位置",
+      "feature1Desc": "位於愛妮島港口正前方，距離H Hotel步行僅3分鐘",
+      "feature2Title": "現代設計",
+      "feature2Desc": "極簡美學搭配日本清水模質感藝術牆面",
+      "feature3Title": "Z世代專屬",
+      "feature3Desc": "專為重視風格與便利的年輕旅客設計",
       "rooms": "房間數：30",
-      "openingYear": "開幕年：2025",
-      "location": "菲律賓，巴拉望，愛妮島，Barangay Buena Suerte Cabigsing，5113",
-      "highlights": "免費停車、餐廳、24小時前台、機場接送",
-      "nearestAirport": "El Nido Airport (ENI) - 4.1 km"
+      "openingYear": "開幕年：2026",
+      "location": "愛妮島市中心，巴拉望",
+      "style": "風格：極簡、現代",
+      "phone": "+63 917 789 0123",
+      "website": "www.zgardenhotel.com"
     }
   },
   "common": {
