feat: 添加Gentleman Cut理发厅页面和翻译内容
添加Gentleman Cut理发厅的详情页面，包含图片展示和多语言支持
更新investing.html以包含新理发厅的链接
在翻译文件中添加Gentleman Cut的相关内容

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -428,6 +428,10 @@
       "nacpanSunsetMarket": {
         "name": "Nacpan Sunset Market",
         "description": "While enjoying the sunset views at Nacpan Beach, you can also experience the fun of Nacpan Sunset Market. This market, inspired by Taiwan's famous night markets, allows visitors to experience a rich variety of food and crafts in a romantic beach atmosphere."
+      },
+      "gentlemanCut": {
+        "name": "Gentleman Cut Barbershop",
+        "description": "Gentleman Cut Barbershop offers premium grooming services in a relaxing atmosphere, ensuring you look your best for any occasion."
       }
     }
   },
